# CFizer

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
cfizer/: __init__.py  cfize.py  cfize_ds.py  config.yml  groups.py  startup.py  units.py  utils.py  vocabulary.yml
cfizer/utilities/: vocab_from_xlsx.py
dev/: 11_excel_to_yaml.md  __init__.py  algorithm.py  asyncio_toys.ipynb  by_class.py  cf_array_expts.ipynb  cf_functions.py  cfize.py  cfize_ds.py  config.yml  config_wrangling.ipynb  dataset_functions.py  example_submission_script.sl  excel_to_yaml.ipynb  excel_to_yaml_expt.ipynb  file_dims.py  file_functions.py  groups.py  netcdf_proc.ipynb  netcdf_xarray.ipynb  setup.py  startup.py  test.ipynb  units.py  utils.py  variable_functions.py  vocab_from_xlsx.py  vocabulary.yml
src/: startup.py  units.py  vocab_from_xlsx.py  vocabulary.yml
