[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cfizer"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "netcdf4>=1.5.7",
    "xarray>=0.20.1",
    "pyyaml=6.0",
    "cfunits>=3.3.4",
    "numpy>=1.22.3"
]

[project.optional-dependencies]
dev = ["openpyxl>=3.0"]

[project.scripts]
cfize = "src.cfize:main"
